# AMEWS_big_kahuna_code

./: .gitignore  pyproject.toml
API Scripts/: API Scripts.pyproj  BK_AMEWS_24cells.py  BK_AMEWS_6cells.py  ContainerManager.py  CustomAlert.py  CustomDAQ.py  CustomScheduler.py  CustomSequence.py  CustomService.py  CustomTracker.py  LS and AS tests.sln  LS_AS_demo.py  LS_AS_tests.py  LogReader.py  a10_sila.py  promptsWithDC.xml  promptspart1.xml  protocol.py
API Scripts/versions/: AMEWS_bk  (+2 more)
src/: ASDigest_vols_20250515_124645.csv  ASDigest_vols_20250515_151711.csv  ASDigest_vols_20250515_154557.csv  ASDigest_vols_20250515_155353.csv  ASDigest_vols_20250515_161223.csv  ASDigest_vols_20250515_164516.csv  ASDigest_vols_20250515_165229.csv  ASDigest_vols_20250515_165758.csv  ASDigest_vols_20250515_170236.csv  ASDigest_vols_20250515_184908.csv  ASExcerpt_20250515_124645.csv  ASExcerpt_20250515_145640.csv  ASExcerpt_20250515_151711.csv  ASExcerpt_20250515_154557.csv  ASExcerpt_20250515_155353.csv  ASExcerpt_20250515_161223.csv  ASExcerpt_20250515_164516.csv  ASExcerpt_20250515_165229.csv  ASExcerpt_20250515_165758.csv  ASExcerpt_20250515_170236.csv  ASExcerpt_20250515_184908.csv  ASMain_20250513_115411.csv  BK_AMEWS_24cells.py  BK_AMEWS_6cell_fill.csv  BK_AMEWS_6cells.py  BK_AMEWS_good.py  ContainerManager.py  CustomAlert.py  CustomService.py  CustomServiceGood.py  CustomServiceNew.py  CustomTracker.py  LS_AS_demo.py  LS_AS_tests.py  LogReader.py  a10_sila.py  big_kahuna_amews_module.py  big_kahuna_module.py  big_kahuna_protocol_types.py  chem_1549_20250508_160159.xml  (+68 more)
(+352 files in other folders)
