[project]
name = "AMEWS_big_kahuna_code"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ryan Lewis", email = "ryan.lewis@anl.gov"},
]
dependencies = ["ruff>=0.11.7", "pandas>=2.2.3", "pythonnet>=3.0.5", "matplotlib>=3.10.1", "mcculw>=1.0.0", "sila2>=0.12.2", "keyboard>=0.13.5", "pyzbar>=0.1.9", "opencv-python>=4.11.0.86"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
